test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-shared.good
assign-nonnil-owned-from-oknil-shared.chpl:8: error: Cannot assign to owned MyClass from shared MyClass?
